# martify.contracts

./: README.md  cabal.project  close.json  ghostchain_mainnet.plutus  hie.yaml  market.plutus  market_testnet_final.plutus  market_testnet_final_fix2.plutus  martify.cabal  update.json  vendere.cabal
app/: datum-json.hs  market-plutus.hs
scripts/: market.plutus
src/: SerialiseJSON.hs  Utility.hs
src/Market/: Offchain.hs  Onchain.hs  Trace.hs  Types.hs
src/SellBuy/: Market.hs
src/Updator/: Onchain.hs  Types.hs
